--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <a href="http://127.0.0.1:5500/index.html" class="logout-btn" onclick="return confirmLogout()">Logout</a>
+      <a href="index.html" class="logout-btn" onclick="return confirmLogout()">Logout</a>
  
   </header>
 
