--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
       <h2 class="section-title">Current Promos</h2>
       <p>🔥 <strong>Graveyard Rate:</strong> Enjoy discounted access from <strong>12 Midnight to 6AM</strong>.</p>
     </div>
-    <a class="View-more-btn">viewMore</a>
+    <a class="view-more-btn">vView More</a>
   </section>
 
   <!-- Contact Us -->
