--- a/login.html
+++ b/login.html
@@ -6,7 +6,9 @@
   <title>Login | Rage Fitness Gym</title>
   <link rel="stylesheet" href="login.css" />
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <!-- ✅ Updated Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
     .password-container {
@@ -17,7 +19,7 @@
     .password-container input {
       width: 100%;
       padding: 12px 15px;
-      padding-right: 40px; /* space for the eye icon */
+      padding-right: 40px;
       font-size: 16px;
       border-radius: 8px;
       border: 1px solid #ddd;
@@ -41,14 +43,13 @@
     }
 
     .toggle-eye:hover {
-      color: #333; /* darker shade when hovered */
+      color: #333;
     }
 
     .toggle-eye:active {
-      color: #4CAF50; /* active color when clicked */
+      color: #4CAF50;
     }
 
-    /* Optional: Add focus styles */
     .password-container input:focus + .toggle-eye {
       color: #4CAF50;
     }
@@ -66,7 +67,8 @@
 
             <div class="password-container">
               <input type="password" id="password" placeholder="Password" required />
-              <i class="fas fa-eye toggle-eye" id="togglePassword" onclick="togglePassword()"></i>
+              <!-- ✅ Updated to use FontAwesome 6 solid style -->
+              <i class="fa-solid fa-eye toggle-eye" id="togglePassword" onclick="togglePassword()"></i>
             </div>
 
             <button type="submit" class="btn">Login</button>
