--- a/login.html
+++ b/login.html
@@ -293,7 +293,7 @@
       const validPassword = "rage123";
 
       if (email === validEmail && password === validPassword) {
-        window.location.href = "http://127.0.0.1:5500/home.html";
+        window.location.href = "home.html";
         alert("Login successful! Welcome to Rage Fitness.");
       } else {
         document.getElementById("error-msg").textContent = "Invalid email or password.";
