--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="hero-content">
       <h2>DARE TO BE DIFFERENT</h2>
       <p>24 Hours Gym Access | Circuit Class | Boxing Fitness Class</p>
-      <a href="login.html" class="btn">Join Now</a>
+      <a href="http://127.0.0.1:5500/login.html" class="btn">Join Now</a>
     </div>
   </section>
 
